# Data_Structures

HW1/: CMakeLists.txt  Dictionary.h  Mytests.cpp  Player.cpp  Player.h  README.md  Team.cpp  Team.h  test.in  worldcup23a1.cpp  worldcup23a1.h
HW2/: CMakeLists.txt  Mytests.cpp  Player.cpp  Player.h  README.md  RankedTree.cpp  RankedTree.h  SkipListTeams.cpp  SkipListTeams.h  Team.cpp  Team.h  Uptrees.cpp  Uptrees.h  worldcup23a2.cpp  worldcup23a2.h
